<resources>

    <!--  App-related Strings  -->
    <string name="app_name">Main App</string>

    <!--  Visible Text Strings  -->
    <string name="welcome_back_visible">Welcome Back!</string>
    <string name="please_log_in_with_your_details_visible">Please Log In With Your Details</string>
    <string name="business_id_visible">Business ID:</string>
    <string name="password_visible">Password:</string>
    <string name="keep_me_signed_in_visible">Keep Me Signed In</string>
    <string name="forgot_password_visible">Forgot Password</string>
    <string name="or_sign_up_instead_visible">Or Sign Up Instead</string>
    <string name="or_log_in_instead_visible">Or, Log In Instead</string>
    <string name="please_provide_details_for_signing_up_visible">Please Provide Details For Signing Up</string>
    <string name="join_us_visible">Join Us!</string>
    <string name="re_enter_password_visible">Re-Enter Password:</string>
    <string name="result_view_visible">Java is working!</string>

    <!--  Button Strings  -->
    <string name="recognition_button">Recognition</string>
    <string name="setup_button">Setup</string>
    <string name="log_in_button">Log In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="pick_a_file_button">Pick a File</string>
    <string name="python_button">Python</string>
    <string name="start_recognition_button">Start Recognition</string>
    <string name="start_recording_button">Start Recording</string>
    <string name="stop_recording_button">Stop Recording</string>
    <string name="trials_button">Trails!</string>

    <!--  Content Description Strings  -->
    <string name="logo_context">Logo</string>
    <string name="switch_camera_context">Switch Camera</string>
    <string name="flash_button_context">Toggle Flash</string>
    <string name="recording_button_context">Start Recording</string>
    <string name="set_visibility_context">set_visibility</string>
    <string name="left_icon_context">Left Icon</string>
    <string name="right_icon_context">Right Icon</string>
    <string name="toggle_flash_button_context">toggle flash button</string>
    <string name="flip_camera_button_context">flip camera button</string>

    <!--  Hint Strings  -->
    <string name="email_address_hint">Enter Email Address</string>
    <string name="enter_password_hint">Enter Password</string>
    <string name="enter_business_id_hint">Enter Business ID</string>
    <string name="re_enter_password_hint">Re-Enter Password</string>

    <!--  New Strings  -->
    <string name="newstring">New Strings Start Here: </string>
    <string name="wait_message_visible">Please wait till the processing is finished!</string>
    <string name="enter_your_business_id_hint">Enter your Business ID</string>

</resources>