<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TrialsActivity">

    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40sp"
        android:id="@+id/capture"
        android:src="@drawable/round_fiber_manual_record_24"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/recording_button_context"
        />

    <ImageButton
        android:id="@+id/toggleFlash"
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="10sp"
        android:layout_marginTop="10sp"
        android:layout_marginEnd="10sp"
        android:layout_marginBottom="10sp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/toggle_flash_button_context"
        android:src="@drawable/round_flash_on_24"
        app:tint="#fff" />

    <ImageButton
        android:layout_width="40sp"
        android:layout_height="40sp"
        android:layout_below="@id/toggleFlash"
        android:layout_marginEnd="10sp"
        android:layout_alignParentEnd="true"
        android:id="@+id/flipCamera"
        android:src="@drawable/round_flip_camera_android_24"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:tint="#fff"
        android:contentDescription="@string/flip_camera_button_context"
        />

    <TextView
        android:id="@+id/seconds_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:gravity="center_vertical"
        android:layout_marginTop="20dp"
        android:background="@color/black"
        android:foregroundTint="@color/white"
        />

</RelativeLayout>