<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/left_background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_half_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/left_bg"
        android:alpha="0.5"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/left_side"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_half_line"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        >

        <ImageView
            android:id="@+id/setup_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/setup_art_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/left_top_end"
            app:layout_constraintBottom_toBottomOf="@id/left_bottom_end"
            app:tint="#9575CD"
            android:contentDescription="@string/left_icon_context" />

        <!--Left Button-->
        <Button
            android:id="@+id/left_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/left_half_line"
            app:layout_constraintRight_toRightOf="@id/left_half_line"
            app:layout_constraintTop_toTopOf="@id/left_button_line"
            app:layout_constraintBottom_toBottomOf="@id/left_button_line"
            android:text="@string/setup_button"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_top_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.21"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_bottom_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.49"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_half_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"

            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_button_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/right_background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="@id/vertical_half_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/right_bg"
        android:alpha="0.5"
        />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/right_side"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="@id/vertical_half_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="20dp"
        >

        <ImageView
            android:id="@+id/recog_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/recog_art_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/right_top_end"
            app:layout_constraintBottom_toBottomOf="@id/right_bottom_end"
            app:tint="#4CAF50"
            android:contentDescription="@string/right_icon_context" />

        <!--Left Button-->
        <Button
            android:id="@+id/right_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="@id/right_half_line"
            app:layout_constraintRight_toRightOf="@id/right_half_line"
            app:layout_constraintTop_toTopOf="@id/right_button_line"
            app:layout_constraintBottom_toBottomOf="@id/right_button_line"
            android:text="@string/recognition_button"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_top_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.21"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_bottom_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.49"
            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_half_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"

            />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_button_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.80"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/trial_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/trial_button_guide"
        app:layout_constraintBottom_toBottomOf="@id/trial_button_guide"
        app:layout_constraintLeft_toLeftOf="@id/vertical_half_line"
        app:layout_constraintRight_toRightOf="@id/vertical_half_line"
        android:text="@string/trials_button"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/trial_button_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        />

    <!--Vertical Half Line-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_half_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

</androidx.constraintlayout.widget.ConstraintLayout>