<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupMainActivity">

    <!--  Camera Layout  -->
    <FrameLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/camera_guide"
        >

        <androidx.camera.view.PreviewView
            android:id="@+id/cameraView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </FrameLayout>

    <!--  Switch Camera Button  -->
    <ImageButton
        android:id="@+id/switch_camera_button"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:contentDescription="@string/switch_camera_context"
        android:background="@drawable/round_cameraswitch_24"
        app:layout_constraintLeft_toLeftOf="@+id/switch_camera_guide_vertical"
        app:layout_constraintRight_toRightOf="@+id/switch_camera_guide_vertical"
        app:layout_constraintTop_toTopOf="@+id/recording_guide"
        app:layout_constraintBottom_toBottomOf="@+id/recording_guide"
        android:foregroundTint="@color/white"
        />

    <!--  Flash Button  -->
    <ImageButton
        android:id="@+id/flashButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:contentDescription="@string/flash_button_context"
        android:background="@drawable/baseline_flash_on_24"
        app:layout_constraintLeft_toLeftOf="@+id/flash_guide_vertical"
        app:layout_constraintRight_toRightOf="@+id/flash_guide_vertical"
        app:layout_constraintTop_toTopOf="@+id/flash_guide_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/flash_guide_horizontal"
        />

    <!--  Recording Button  -->
<!--    <ImageButton-->
<!--        android:id="@+id/recordingButton"-->
<!--        android:layout_width="105dp"-->
<!--        android:layout_height="105dp"-->
<!--        android:contentDescription="@string/recording_button_context"-->
<!--        android:background="@drawable/round_camera_24"-->
<!--        app:layout_constraintLeft_toLeftOf="@+id/vertical_half"-->
<!--        app:layout_constraintRight_toRightOf="@+id/vertical_half"-->
<!--        app:layout_constraintTop_toTopOf="@+id/recording_guide"-->
<!--        app:layout_constraintBottom_toBottomOf="@+id/recording_guide"-->
<!--        />-->

    <Button
        android:id="@+id/recordButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/recording_guide"
        app:layout_constraintBottom_toBottomOf="@id/recording_guide"
        app:layout_constraintRight_toRightOf="@id/vertical_half"
        app:layout_constraintLeft_toLeftOf="@id/vertical_half"
        android:text="@string/start_recording_button"
        />

    <!--  Camera Horizontal Guide Line  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/camera_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65"
        />

    <!--  Recording Button Horizontal Guide Line  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/recording_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85"
        />

    <!--  Vertical Half Line  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/vertical_half"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        />

    <!--  Switch Camera Button Vertical Guide Line  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/switch_camera_guide_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15"
        />

    <!--  Flash Button Vertical Guide Line  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/flash_guide_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85"
        />

    <!--  Flash Button Horizontal Guide Line  -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/flash_guide_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07"
        />


</androidx.constraintlayout.widget.ConstraintLayout>